--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -10,7 +10,7 @@
     {
       "title": "Portofolio Tailwind by Sandika Galih (WPU)",
       "imageSrc": "projects/portofolio-tailwind.png",
-      "description": "Website ini portofolio pribadi dengan mengikuti tutorial Portofolio Tailwind dari channel Sandhika Galih (WPU). Proyek ini menggunakan Tailwind CSS untuk membangun tampilan responsif yang modern dan profesional.",
+      "description": "Website portofolio pribadi dengan mengikuti tutorial Portofolio Tailwind dari channel Sandhika Galih (WPU). Proyek ini menggunakan Tailwind CSS untuk membangun tampilan responsif yang modern dan profesional.",
       "skills": ["HTML", "CSS", "JAVASCRIPT", "Tailwind CSS"],
       "demo": "https://kinaryo.github.io/portofolio-tailwind-css/",
       "source": "https://github.com/Kinaryo/portofolio-tailwind-css"
